--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "primereact": "^3.0.0-rc.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
-    "react-transition-group": "^2.2.1"
+    "react-transition-group": "^2.2.1",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
